--- a/module08/src/main/car/index.html
+++ b/module08/src/main/car/index.html
@@ -3,48 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <title>Технические характеристики автомобиля BMV</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<h1>Технические характеристики автомобиля BMV</h1>
+<h1>Автомобиль BMV</h1>
+
+<img src="bmw.jpg">
+
+<p>Аббревиатура BMW расшифровывается как «Bayerische Motoren Werke GmbH», что переводится как «Баварские Моторные Заводы». В этом имени скрывается отсылка к родине компании — Баварии. Также оно указывает на изначальную линейку продукции BMW: двигатели для различных задач.
+    <br><br>
+
+<h1>Технические характеристики</h1>
+    <div>
+        Длина<br><br>
+        4936 мм<br><br>
+
+        Ширина<br><br>
+        1868 мм<br><br>
+
+        Высота<br><br>
+        1479 мм<br><br>
+
+        Колесная база<br><br>
+        2975 мм<br><br>
+
+        Клиренс<br><br>
+        144 мм<br><br>
+
+        Ширина передней колеи<br><br>
+        1605 мм<br><br>
+
+        Ширина задней колеи<br><br>
+        1630 мм<br><br>
+
+        Размер колёс<br><br>
+        225/55/R17<br><br>
+    </div>
+<h1>Варианты исполнения</h1>
 <table>
     <tr>
-        <th>Параметр</th>
-        <th>Значение</th>
-    </tr>
-    <tr>
-        <td>Длина</td>
-        <td>4936 мм</td>
-    </tr>
-    <tr>
-        <td>Ширина</td>
-        <td>1868 мм</td>
-    </tr>
-    <tr>
-        <td>Высота</td>
-        <td>1479 мм</td>
-    </tr>
-    <tr>
-        <td>Колесная база</td>
-        <td>2975 мм</td>
-    </tr>
-    <tr>
-        <td>Клиренс</td>
-        <td>144 мм</td>
-    </tr>
-    <tr>
-        <td>Ширина передней колеи</td>
-        <td>1605 мм</td>
-    </tr>
-    <tr>
-        <td>Ширина задней колеи</td>
-        <td>1630 мм</td>
-    </tr>
-    <tr>
-        <td>Размер колёс</td>
-        <td>225/55/R17</td>
-    </tr>
-    <tr>
-        <td>Варианты исполнения</td>
         <td>
             <ul>
                 <li>2.0 л, 190 л.с., дизель, АКПП, полный привод (4WD)</li>
@@ -60,6 +57,8 @@
         </td>
     </tr>
 </table>
+<br><br>
+<hr>
 <a href="author.html">Автор работы</a>
 </body>
 </html>
