- Задание 1 - Добавлен файл стилей style.css

--- a/module08/src/main/car/author.html
+++ b/module08/src/main/car/author.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Автор работы</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Автор работы</h1>
 <p>Брагин Василий Николаевич</p>
+<br><br>
+<hr>
 <a href="index.html">Назад</a>
 </body>
 </html>
