- Задание 2 - Добавлен сервлет FinancialServlet - Добавленны основные страницы

--- a/module08/src/main/car/index.html
+++ b/module08/src/main/car/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Технические характеристики автомобиля BMV</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 <h1>Автомобиль BMV</h1>
 
-<img src="bmw.jpg">
+<img src="img/bmw.jpg">
 
 <p>Аббревиатура BMW расшифровывается как «Bayerische Motoren Werke GmbH», что переводится как «Баварские Моторные Заводы». В этом имени скрывается отсылка к родине компании — Баварии. Также оно указывает на изначальную линейку продукции BMW: двигатели для различных задач.
     <br><br>
